# fullstack-app

./: .gitignore  guide-env-dev.md
.github/instructions/: instructions.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  routes.py
frontend/: Dockerfile  package.json
