[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Fullstack backend"
authors = ["Tu Nombre <tu@email.com>"]

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
